
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:minHeight="?attr/actionBarSize"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:contentInsetLeft="0dp"
        app:contentInsetStart="16dp"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:background="?attr/colorPrimary" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_below="@+id/toolbar"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:id="@+id/add_reminder_layout_top"
        android:background="@color/CorPrimaria"
        android:orientation="vertical"
        android:layout_height="148dp">

        <EditText
            android:layout_width="match_parent"
            android:id="@+id/titulolembrete"
            android:layout_marginLeft="5dp"
            android:gravity="center"
            android:hint="@string/lembreteadd"
            android:textSize="25dp"
            android:lines="4"
            android:minLines="4"
            android:textColor="@android:color/white"
            android:scrollHorizontally="false"
            android:textColorHint="@color/primary_text_disabled_material_dark"
            android:inputType="textCapWords|textMultiLine"
            android:layout_marginRight="2dp"
            android:layout_height="140dp"/>

    </LinearLayout>

    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_below="@id/add_reminder_layout_top"
        android:layout_height="fill_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_marginTop="8dp"
                android:text="@string/detalhes"
                android:id="@+id/status"
                android:textSize="15dp"
                android:gravity="center_vertical"
                android:layout_marginLeft="72dp"
                android:textColor="@color/abc_secondary_text_material_dark"
                android:layout_height="72dp"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:clickable="true"
                android:onClick="setDate"
                android:id="@+id/date"
                android:background="?android:attr/selectableItemBackground"
                android:layout_height="72dp">

                <ImageView
                    android:id="@+id/data_icon"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_alignParentLeft="true"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="15dp"
                    android:src="@drawable/calendario"
                    android:layout_centerVertical="true" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:orientation="vertical"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@id/data_icon"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/data_texto"
                        android:textColor="@color/abc_primary_text_material_dark"
                        android:layout_width="wrap_content"
                        android:textSize="15dp"
                        android:layout_height="wrap_content"
                        android:text="@string/data" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:id="@+id/set_date"
                        android:textSize="15dp"
                        android:textColor="@color/abc_secondary_text_material_dark"
                        android:layout_height="wrap_content"/>

                </LinearLayout>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:clickable="true"
                android:onClick="setTime"
                android:id="@+id/time"
                android:background="?android:attr/selectableItemBackground"
                android:layout_height="72dp">

                <ImageView
                    android:id="@+id/relogio_icon"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_alignParentLeft="true"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="15dp"
                    android:src="@drawable/relogio"
                    android:layout_centerVertical="true" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:orientation="vertical"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@id/relogio_icon"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/hora_texto"
                        android:textColor="@color/abc_primary_text_material_dark"
                        android:layout_width="wrap_content"
                        android:textSize="15dp"
                        android:layout_height="wrap_content"
                        android:text="@string/hora" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:id="@+id/set_time"
                        android:textSize="15dp"
                        android:textColor="@color/abc_secondary_text_material_dark"
                        android:layout_height="wrap_content"/>

                </LinearLayout>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:id="@+id/repetir"
                android:layout_height="72dp">

                <ImageView
                    android:id="@+id/repetir_icon"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_alignParentLeft="true"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="15dp"
                    android:src="@drawable/repeticao"
                    android:layout_centerVertical="true" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:orientation="vertical"
                    android:id="@+id/repeat_ll"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@id/repetir_icon"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/repeat_text"
                        android:textColor="@color/abc_primary_text_material_dark"
                        android:layout_width="wrap_content"
                        android:textSize="15dp"
                        android:layout_height="wrap_content"
                        android:text="@string/repetir" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:id="@+id/repetir_text"
                        android:textSize="15dp"
                        android:textColor="@color/abc_secondary_text_material_dark"
                        android:layout_height="wrap_content"/>

                </LinearLayout>

                <Switch
                    android:id="@+id/repeat_switch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="16dp"
                    android:layout_marginLeft="8dp"
                    android:onClick="onSwitchRepeat"
                    android:checked="true"
                    android:textOn="On"
                    android:textOff="Off"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:id="@+id/RepeatNo"
                android:clickable="true"
                android:onClick="setRepeatNo"
                android:background="?android:attr/selectableItemBackground"
                android:layout_height="72dp">

                <ImageView
                    android:id="@+id/repeat_no_icon"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_alignParentLeft="true"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="15dp"
                    android:src="@drawable/repeticaoacada"
                    android:layout_centerVertical="true" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:orientation="vertical"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@id/repeat_no_icon"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/repetir_acada_texto"
                        android:textColor="@color/abc_primary_text_material_dark"
                        android:layout_width="wrap_content"
                        android:textSize="15dp"
                        android:layout_height="wrap_content"
                        android:text="@string/repetiroff" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:id="@+id/set_repeat_no"
                        android:textSize="15dp"
                        android:textColor="@color/abc_secondary_text_material_dark"
                        android:layout_height="wrap_content"/>

                </LinearLayout>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:id="@+id/RepeatType"
                android:clickable="true"
                android:onClick="selectRepeatType"
                android:background="?android:attr/selectableItemBackground"
                android:layout_height="72dp">

                <ImageView
                    android:id="@+id/tipo_icon"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_alignParentLeft="true"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="15dp"
                    android:src="@drawable/tiporep"
                    android:layout_centerVertical="true" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:orientation="vertical"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@id/tipo_icon"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/repetir_texto"
                        android:textColor="@color/abc_primary_text_material_dark"
                        android:layout_width="wrap_content"
                        android:textSize="15dp"
                        android:layout_height="wrap_content"
                        android:text="@string/tipo_repetir" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:id="@+id/set_repeat_type"
                        android:textSize="15dp"
                        android:textColor="@color/abc_secondary_text_material_dark"
                        android:layout_height="wrap_content"/>

                </LinearLayout>

            </RelativeLayout>

        </LinearLayout>

    </ScrollView>



    <com.getbase.floatingactionbutton.FloatingActionButton
        android:id="@+id/Botao1floating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:onClick="selectFab1"
        fab:fab_icon="@drawable/notificacao_off"
        fab:fab_colorNormal="#2a9d8f"
        fab:fab_colorPressed="@color/CorPressione"
        app:fab_size="normal"
        android:layout_marginTop="215dp"
        android:layout_marginLeft="1dp"/>

    <com.getbase.floatingactionbutton.FloatingActionButton
        android:id="@+id/Botao2floating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:onClick="selectFab2"
        fab:fab_icon="@drawable/notificacao_"
        fab:fab_colorNormal="#2a9d8f"
        fab:fab_colorPressed="@color/CorPressione"
        app:fab_size="normal"
        android:layout_marginTop="215dp"
        android:layout_marginLeft="1dp"/>

</RelativeLayout>
